feat: update swagger and data struce
